--- a/figures/Figure_3A/UMAP_regulon.Rmd
+++ b/figures/Figure_3A/UMAP_regulon.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Emma Pan Neuro (Control + ND75KD)"
-description: "Figure 2B"
+description: "Figure 3A"
 author: "Vincent Gardeux"
 date: "2025/01/24"
 updated: "2025/01/24"
@@ -51,7 +51,7 @@ set.seed(42)
 
 ```{r}
 input_seurat_object <- "./data/Pan_neuro_integrated_FINAL.rds"
-output_figure_prefix <- "./figures/Figure_2I/"
+output_figure_prefix <- "./figures/Figure_3A/"
 ```
 
 ## I. Reading Seurat object
@@ -66,36 +66,6 @@ message(nrow(data.seurat), " genes were loaded")
 ```
 
 ## Regulon UMAP plots
-
-```{r, fig.height = 12, fig.width = 12}
-p <- FeaturePlot(data.seurat, reduction = "SCENICbinarizedumap", pt.size = 0.5, features = "SCENIC_sima_activating_regulon", order = T, slot = "data") + NoLegend()
-p
-```
-
-```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "Regulon_UMAP_sima_regulon.pdf"), width = 12, height = 12, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "Regulon_UMAP_sima_regulon.png"), width = 12, height = 12, dpi = 1000, bg = 'white')
-```
-
-```{r, fig.height = 12, fig.width = 12}
-p <- FeaturePlot(data.seurat, reduction = "SCENICbinarizedumap", pt.size = 0.5, features = "SCENIC_sima_activating_regulon_binarized", order = T, slot = "data") + NoLegend()
-p
-```
-
-```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "Regulon_UMAP_sima_regulon_binarized.pdf"), width = 12, height = 12, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "Regulon_UMAP_sima_regulon_binarized.png"), width = 12, height = 12, dpi = 1000, bg = 'white')
-```
-
-```{r, fig.height = 4, fig.width = 4}
-p <- FeaturePlot(data.seurat, reduction = "SCENICbinarizedumap", pt.size = 0.5, features = "SCENIC_sima_activating_regulon_binarized", order = T, slot = "data") + NoLegend()
-p
-```
-
-```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "Regulon_UMAP_sima_regulon_binarized_small.pdf"), width = 4, height = 4, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "Regulon_UMAP_sima_regulon_binarized_small.png"), width = 4, height = 4, dpi = 1000, bg = 'white')
-```
 
 ```{r, fig.height = 12, fig.width = 12}
 p <- FeaturePlot(data.seurat, reduction = "SCENICbinarizedumap", pt.size = 0.5, features = "SCENIC_crc_activating_regulon", order = T) + NoLegend()
@@ -130,36 +100,6 @@ ggsave(p, filename = paste0(output_figure_prefix, "Regulon_UMAP_crc_regulon_bina
 ```
 
 ## UMAP plots
-
-```{r, fig.height = 12, fig.width = 12}
-p <- FeaturePlot(data.seurat, reduction = "umap_harmony", pt.size = 0.5, features = "SCENIC_sima_activating_regulon", order = T, slot = "data") + NoLegend()
-p
-```
-
-```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "UMAP_sima_regulon.pdf"), width = 12, height = 12, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "UMAP_sima_regulon.png"), width = 12, height = 12, dpi = 1000, bg = 'white')
-```
-
-```{r, fig.height = 12, fig.width = 12}
-p <- FeaturePlot(data.seurat, reduction = "umap_harmony", pt.size = 0.5, features = "SCENIC_sima_activating_regulon_binarized", order = T, slot = "data") + NoLegend()
-p
-```
-
-```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "UMAP_sima_regulon_binarized.pdf"), width = 12, height = 12, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "UMAP_sima_regulon_binarized.png"), width = 12, height = 12, dpi = 1000, bg = 'white')
-```
-
-```{r, fig.height = 4, fig.width = 4}
-p <- FeaturePlot(data.seurat, reduction = "umap_harmony", pt.size = 0.5, features = "SCENIC_sima_activating_regulon_binarized", order = T, slot = "data") + NoLegend()
-p
-```
-
-```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "UMAP_sima_regulon_binarized_small.pdf"), width = 4, height = 4, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "UMAP_sima_regulon_binarized_small.png"), width = 4, height = 4, dpi = 1000, bg = 'white')
-```
 
 ```{r, fig.height = 12, fig.width = 12}
 p <- FeaturePlot(data.seurat, reduction = "umap_harmony", pt.size = 0.5, features = "SCENIC_crc_activating_regulon", order = T) + NoLegend()
