--- a/figures/Figure_2I/UMAP_regulon.Rmd
+++ b/figures/Figure_2I/UMAP_regulon.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Emma Pan Neuro (Control + ND75KD)"
-description: "Figure 2B"
+description: "Figure 2I"
 author: "Vincent Gardeux"
 date: "2025/01/24"
 updated: "2025/01/24"
@@ -97,38 +97,6 @@ ggsave(p, filename = paste0(output_figure_prefix, "Regulon_UMAP_sima_regulon_bin
 ggsave(p, filename = paste0(output_figure_prefix, "Regulon_UMAP_sima_regulon_binarized_small.png"), width = 4, height = 4, dpi = 1000, bg = 'white')
 ```
 
-```{r, fig.height = 12, fig.width = 12}
-p <- FeaturePlot(data.seurat, reduction = "SCENICbinarizedumap", pt.size = 0.5, features = "SCENIC_crc_activating_regulon", order = T) + NoLegend()
-p
-```
-
-```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "Regulon_UMAP_crc_regulon.pdf"), width = 12, height = 12, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "Regulon_UMAP_crc_regulon.png"), width = 12, height = 12, dpi = 1000, bg = 'white')
-```
-
-```{r, fig.height = 12, fig.width = 12}
-p <- FeaturePlot(data.seurat, reduction = "SCENICbinarizedumap", pt.size = 0.5, features = "SCENIC_crc_activating_regulon_binarized", order = T) + NoLegend()
-p
-```
-
-```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "Regulon_UMAP_crc_regulon_binarized.pdf"), width = 12, height = 12, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "Regulon_UMAP_crc_regulon_binarized.png"), width = 12, height = 12, dpi = 1000, bg = 'white')
-```
-
-# Smaller
-
-```{r, fig.height = 4, fig.width = 4}
-p <- FeaturePlot(data.seurat, reduction = "SCENICbinarizedumap", pt.size = 0.5, features = "SCENIC_crc_activating_regulon_binarized", order = T) + NoLegend()
-p
-```
-
-```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "Regulon_UMAP_crc_regulon_binarized_small.pdf"), width = 4, height = 4, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "Regulon_UMAP_crc_regulon_binarized_small.png"), width = 4, height = 4, dpi = 1000, bg = 'white')
-```
-
 ## UMAP plots
 
 ```{r, fig.height = 12, fig.width = 12}
@@ -160,37 +128,4 @@ p
 ggsave(p, filename = paste0(output_figure_prefix, "UMAP_sima_regulon_binarized_small.pdf"), width = 4, height = 4, bg = "white")
 ggsave(p, filename = paste0(output_figure_prefix, "UMAP_sima_regulon_binarized_small.png"), width = 4, height = 4, dpi = 1000, bg = 'white')
 ```
-
-```{r, fig.height = 12, fig.width = 12}
-p <- FeaturePlot(data.seurat, reduction = "umap_harmony", pt.size = 0.5, features = "SCENIC_crc_activating_regulon", order = T) + NoLegend()
-p
-```
-
-```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "UMAP_crc_regulon.pdf"), width = 12, height = 12, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "UMAP_crc_regulon.png"), width = 12, height = 12, dpi = 1000, bg = 'white')
-```
-
-```{r, fig.height = 12, fig.width = 12}
-p <- FeaturePlot(data.seurat, reduction = "umap_harmony", pt.size = 0.5, features = "SCENIC_crc_activating_regulon_binarized", order = T) + NoLegend()
-p
-```
-
-```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "UMAP_crc_regulon_binarized.pdf"), width = 12, height = 12, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "UMAP_crc_regulon_binarized.png"), width = 12, height = 12, dpi = 1000, bg = 'white')
-```
-
-# Smaller
-
-```{r, fig.height = 4, fig.width = 4}
-p <- FeaturePlot(data.seurat, reduction = "umap_harmony", pt.size = 0.5, features = "SCENIC_crc_activating_regulon_binarized", order = T) + NoLegend()
-p
-```
-
-```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "UMAP_crc_regulon_binarized_small.pdf"), width = 4, height = 4, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "UMAP_crc_regulon_binarized_small.png"), width = 4, height = 4, dpi = 1000, bg = 'white')
-```
-
 
