--- a/figures/Figure_5A/AUC_Oxphos_68_Porcelli.Rmd
+++ b/figures/Figure_5A/AUC_Oxphos_68_Porcelli.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Emma Pan Neuro (Control + ND75KD)"
-description: "Figure 4B"
+description: "Figure 5A"
 author: "Vincent Gardeux"
 date: "2025/01/31"
 updated: "2025/02/12"
@@ -52,7 +52,7 @@ set.seed(42)
 
 ```{r}
 input_seurat_object <- "./data/Pan_neuro_integrated_FINAL.rds"
-output_figure_prefix <- "./figures/Figure_4B/"
+output_figure_prefix <- "./figures/Figure_5A/"
 ```
 
 ## I. Reading Seurat object
@@ -68,174 +68,99 @@ message(nrow(data.seurat), " genes were loaded")
 
 ## Boxplot (Control + ND-75 KD)
 
-```{r, fig.width=2,fig.height=5}
+```{r, fig.width=15,fig.height=5}
 # Extracting the relevant metadata
 boxplot_data <- as.data.frame(data.seurat@meta.data)
+
+# Calculating median values of "AUC_OXPHOS_68_Porcelli" for each group
+median_values <- tapply(boxplot_data$AUC_OXPHOS_68_Porcelli, boxplot_data$annotation_clusters, median)
+
+# Sorting the metadata based on median values
+boxplot_data$annotation_clusters <- factor(boxplot_data$annotation_clusters, levels = names(sort(median_values, decreasing = F)))
 
 # Plot
-p <- ggplot(boxplot_data, aes(x = Neuron_category, y = AUC_OXPHOS_117_Flybase, fill = Neuron_category)) +
-  geom_boxplot() +
-  labs(x = NULL, y = "AUC_OXPHOS_117_Flybase") +
-  #theme_minimal() + theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
-  theme_minimal() + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
-  #scale_fill_manual(values = annotatedClusterPalette) +
-  scale_fill_manual(values = steinPalette) +
-  NoLegend()
-
-p
-```
-
-```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_117_by_neuron_category.pdf"), width = 2, height = 5, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_117_by_neuron_category.png"), width = 2, height = 5, dpi = 1000, bg = 'white')
-```
-
-# Statistical analysis
-
-```{r}
-stats <- wilcox.test(boxplot_data$AUC_OXPHOS_117_Flybase[boxplot_data$Neuron_category == "Central Brain A"], boxplot_data$AUC_OXPHOS_117_Flybase[boxplot_data$Neuron_category == "Central Brain B"])
-stats
-```
-
-```{r}
-stats <- wilcox.test(boxplot_data$AUC_OXPHOS_117_Flybase[boxplot_data$Neuron_category == "Central Brain A"], boxplot_data$AUC_OXPHOS_117_Flybase[boxplot_data$Neuron_category == "Optic lobe"])
-stats
-```
-
-```{r}
-stats <- wilcox.test(boxplot_data$AUC_OXPHOS_117_Flybase[boxplot_data$Neuron_category == "Central Brain A"], boxplot_data$AUC_OXPHOS_117_Flybase[boxplot_data$Neuron_category == "Glia"])
-stats
-```
-
-```{r}
-stats <- wilcox.test(boxplot_data$AUC_OXPHOS_117_Flybase[boxplot_data$Neuron_category == "Central Brain B"], boxplot_data$AUC_OXPHOS_117_Flybase[boxplot_data$Neuron_category == "Optic lobe"])
-stats
-```
-
-```{r}
-stats <- wilcox.test(boxplot_data$AUC_OXPHOS_117_Flybase[boxplot_data$Neuron_category == "Central Brain B"], boxplot_data$AUC_OXPHOS_117_Flybase[boxplot_data$Neuron_category == "Glia"])
-stats
-```
-
-```{r}
-stats <- wilcox.test(boxplot_data$AUC_OXPHOS_117_Flybase[boxplot_data$Neuron_category == "Optic lobe"], boxplot_data$AUC_OXPHOS_117_Flybase[boxplot_data$Neuron_category == "Glia"])
-stats
-```
-
-```{r, fig.width=3,fig.height=8}
-# Extracting the relevant metadata
-boxplot_data <- as.data.frame(data.seurat@meta.data)
-
-# Perform pairwise Wilcoxon tests and annotate p-values
-p <- ggplot(boxplot_data, aes(x = Neuron_category, y = AUC_OXPHOS_117_Flybase, fill = Neuron_category)) +
-  geom_boxplot() +
-  labs(x = NULL, y = "AUC_OXPHOS_117_Flybase") +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1)) +
-  scale_fill_manual(values = steinPalette) +
-  NoLegend() +
-  stat_compare_means(method = "wilcox.test", label = "p.signif", 
-                     comparisons = list(
-                       c("Central Brain A", "Central Brain B"),
-                       c("Central Brain A", "Optic lobe"),
-                       c("Central Brain A", "Glia"),
-                       c("Central Brain B", "Optic lobe"),
-                       c("Central Brain B", "Glia"),
-                       c("Optic lobe", "Glia")
-                     ))
-
-p
-```
-
-```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_117_by_neuron_category_with_signif.pdf"), width = 3, height = 8, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_117_by_neuron_category_with_signif.png"), width = 3, height = 8, dpi = 1000, bg = 'white')
-```
-
-## Using the 68-gene pathway
-
-## Boxplot (Control + ND-75 KD)
-
-```{r, fig.width=2,fig.height=5}
-# Extracting the relevant metadata
-boxplot_data <- as.data.frame(data.seurat@meta.data)
-
-# Plot
-p <- ggplot(boxplot_data, aes(x = Neuron_category, y = AUC_OXPHOS_68_Porcelli, fill = Neuron_category)) +
+p <- ggplot(boxplot_data, aes(x = annotation_clusters, y = AUC_OXPHOS_68_Porcelli, fill = annotation_clusters)) +
   geom_boxplot() +
   labs(x = NULL, y = "AUC_OXPHOS_68_Porcelli") +
   #theme_minimal() + theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
   theme_minimal() + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
   #scale_fill_manual(values = annotatedClusterPalette) +
-  scale_fill_manual(values = steinPalette) +
+  scale_fill_manual(values = annotationClustersPalette) +
   NoLegend()
 
 p
+
 ```
 
 ```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_68_by_neuron_category.pdf"), width = 2, height = 5, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_68_by_neuron_category.png"), width = 2, height = 5, dpi = 1000, bg = 'white')
+ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_68_ordered_boxplot.pdf"), width = 15, height = 5, bg = "white")
+ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_68_ordered_boxplot.png"), width = 15, height = 5, dpi = 1000, bg = 'white')
 ```
 
-# Statistical analysis
+## Boxplot (Control only)
 
-```{r}
-stats <- wilcox.test(boxplot_data$AUC_OXPHOS_68_Porcelli[boxplot_data$Neuron_category == "Central Brain A"], boxplot_data$AUC_OXPHOS_68_Porcelli[boxplot_data$Neuron_category == "Central Brain B"])
-stats
-```
-
-```{r}
-stats <- wilcox.test(boxplot_data$AUC_OXPHOS_68_Porcelli[boxplot_data$Neuron_category == "Central Brain A"], boxplot_data$AUC_OXPHOS_68_Porcelli[boxplot_data$Neuron_category == "Optic lobe"])
-stats
-```
-
-```{r}
-stats <- wilcox.test(boxplot_data$AUC_OXPHOS_68_Porcelli[boxplot_data$Neuron_category == "Central Brain A"], boxplot_data$AUC_OXPHOS_68_Porcelli[boxplot_data$Neuron_category == "Glia"])
-stats
-```
-
-```{r}
-stats <- wilcox.test(boxplot_data$AUC_OXPHOS_68_Porcelli[boxplot_data$Neuron_category == "Central Brain B"], boxplot_data$AUC_OXPHOS_68_Porcelli[boxplot_data$Neuron_category == "Optic lobe"])
-stats
-```
-
-```{r}
-stats <- wilcox.test(boxplot_data$AUC_OXPHOS_68_Porcelli[boxplot_data$Neuron_category == "Central Brain B"], boxplot_data$AUC_OXPHOS_68_Porcelli[boxplot_data$Neuron_category == "Glia"])
-stats
-```
-
-```{r}
-stats <- wilcox.test(boxplot_data$AUC_OXPHOS_68_Porcelli[boxplot_data$Neuron_category == "Optic lobe"], boxplot_data$AUC_OXPHOS_68_Porcelli[boxplot_data$Neuron_category == "Glia"])
-stats
-```
-
-```{r, fig.width=3,fig.height=8}
+```{r, fig.width=15,fig.height=5}
 # Extracting the relevant metadata
-boxplot_data <- as.data.frame(data.seurat@meta.data)
+boxplot_data <- as.data.frame(data.seurat[,data.seurat$orig.ident == "Pan_neuro_control"]@meta.data)
 
-# Perform pairwise Wilcoxon tests and annotate p-values
-p <- ggplot(boxplot_data, aes(x = Neuron_category, y = AUC_OXPHOS_68_Porcelli, fill = Neuron_category)) +
+# Filter out <5 cells per annotation
+boxplot_data <- boxplot_data[boxplot_data$seurat_clusters %in% names(which(table(boxplot_data$seurat_clusters) >= 5)),]
+
+# Calculating median values of "AUC_OXPHOS_68_Porcelli" for each group
+median_values <- tapply(boxplot_data$AUC_OXPHOS_68_Porcelli, boxplot_data$annotation_clusters, median)
+
+# Sorting the metadata based on median values
+boxplot_data$annotation_clusters <- factor(boxplot_data$annotation_clusters, levels = names(sort(median_values, decreasing = F)))
+
+# Plot
+p <- ggplot(boxplot_data, aes(x = annotation_clusters, y = AUC_OXPHOS_68_Porcelli, fill = annotation_clusters)) +
   geom_boxplot() +
   labs(x = NULL, y = "AUC_OXPHOS_68_Porcelli") +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1)) +
-  scale_fill_manual(values = steinPalette) +
-  NoLegend() +
-  stat_compare_means(method = "wilcox.test", label = "p.signif", 
-                     comparisons = list(
-                       c("Central Brain A", "Central Brain B"),
-                       c("Central Brain A", "Optic lobe"),
-                       c("Central Brain A", "Glia"),
-                       c("Central Brain B", "Optic lobe"),
-                       c("Central Brain B", "Glia"),
-                       c("Optic lobe", "Glia")
-                     ))
+  #theme_minimal() + theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+  theme_minimal() + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
+  #scale_fill_manual(values = annotatedClusterPalette) +
+  scale_fill_manual(values = annotationClustersPalette) +
+  NoLegend()
 
 p
+
 ```
 
 ```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_68_by_neuron_category_with_signif.pdf"), width = 3, height = 8, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_68_by_neuron_category_with_signif.png"), width = 3, height = 8, dpi = 1000, bg = 'white')
+ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_68_ordered_boxplot_control-only.pdf"), width = 15, height = 5, bg = "white")
+ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_68_ordered_boxplot_control-only.png"), width = 15, height = 5, dpi = 1000, bg = 'white')
+```
+
+## Boxplot (ND-75 KD only)
+
+```{r, fig.width=15,fig.height=5}
+# Extracting the relevant metadata
+boxplot_data <- as.data.frame(data.seurat[,data.seurat$orig.ident == "Pan_neuro_ND75KD"]@meta.data)
+
+# Filter out <5 cells per annotation
+boxplot_data <- boxplot_data[boxplot_data$seurat_clusters %in% names(which(table(boxplot_data$seurat_clusters) >= 5)),]
+
+# Calculating median values of "AUC_OXPHOS_68_Porcelli" for each group
+median_values <- tapply(boxplot_data$AUC_OXPHOS_68_Porcelli, boxplot_data$annotation_clusters, median)
+
+# Sorting the metadata based on median values
+boxplot_data$annotation_clusters <- factor(boxplot_data$annotation_clusters, levels = names(sort(median_values, decreasing = F)))
+
+# Plot
+p <- ggplot(boxplot_data, aes(x = annotation_clusters, y = AUC_OXPHOS_68_Porcelli, fill = annotation_clusters)) +
+  geom_boxplot() +
+  labs(x = NULL, y = "AUC_OXPHOS_68_Porcelli") +
+  #theme_minimal() + theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+  theme_minimal() + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
+  #scale_fill_manual(values = annotatedClusterPalette) +
+  scale_fill_manual(values = annotationClustersPalette) +
+  NoLegend()
+
+p
+
+```
+
+```{r}
+ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_68_ordered_boxplot_nd75kd-only.pdf"), width = 15, height = 5, bg = "white")
+ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_68_ordered_boxplot_nd75kd-only.png"), width = 15, height = 5, dpi = 1000, bg = 'white')
 ```
